--- a/Mod-4-Project/mod-4-project-frontend/src/App.css
+++ b/Mod-4-Project/mod-4-project-frontend/src/App.css
@@ -26,3 +26,14 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+
+.grid-container {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  /* display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 10px;
+  grid-row-gap: 10px; */
+}
