--- a/Mod-4-Project/mod-4-project-frontend/src/App.css
+++ b/Mod-4-Project/mod-4-project-frontend/src/App.css
@@ -37,3 +37,14 @@
   grid-column-gap: 10px;
   grid-row-gap: 10px; */
 }
+
+.artistdiv {
+  margin: auto;
+  text-align: center;
+  padding: 100px;
+  margin: 20px;
+}
+
+#artist-info {
+  text-align: center;
+}
