--- a/Mod-4-Project/mod-4-project-frontend/src/App.css
+++ b/Mod-4-Project/mod-4-project-frontend/src/App.css
@@ -2,21 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
 
 .App-intro {
   font-size: large;
@@ -32,10 +17,10 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  /* display: grid;
+  display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 10px;
-  grid-row-gap: 10px; */
+  grid-row-gap: 10px;
 }
 
 .artistdiv {
@@ -47,4 +32,37 @@
 
 #artist-info {
   text-align: center;
+}
+#nav {
+  margin:0;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #333;
+  overflow: hidden;
+}
+#nav a {
+  float: right;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 17px 10px;
+  text-decoration: none;
+  font-size: 17px;
+}
+#nav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+#nav a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+#filter {
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 10px;
+}
+.filter{
+    padding: 3px
 }
